--- a/api-ts/package.json
+++ b/api-ts/package.json
@@ -5,18 +5,24 @@
   "main": "src/server.ts",
   "scripts": {
     "start": "ts-node-dev src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "author": "Valentin Gaudin",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "multer": "^1.4.4",
     "ts-node": "^10.7.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "nodemon": "^2.0.15",
     "ts-node-dev": "^1.1.8"
   }
