--- a/api-ts/package.json
+++ b/api-ts/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "mongoose": "^6.2.6",
     "multer": "^1.4.4",
     "ts-node": "^10.7.0"
   },
